src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Dementia Friends International</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Initial Discussion</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Verbal Agreement</fullName>
        </values>
        <values>
            <fullName>Written Agreement</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>DF_Logo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DF Logo (Y/N)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Reach__c</fullName>
        <label>Estimated Reach</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Financial_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financial Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financial_Contribution__c</fullName>
        <label>Financial Contribution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Friend_Count_Date__c</fullName>
        <label>Friend Count Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Friend_Count__c</fullName>
        <label>Friend Count</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Introducer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Introduction Via</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Introduction Via)</relationshipLabel>
        <relationshipName>Introductions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Launch_Date__c</fullName>
        <label>Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Lead_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Web_Site_Url__c</fullName>
        <label>Web Site Url</label>
        <type>Url</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Dementia_Friends_International</fullName>
        <active>true</active>
        <businessProcess>Dementia Friends International</businessProcess>
        <label>Dementia Friends International</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>